Java port: SceneEditorApplication gui bugs fixed